# rang

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  wercker.yml
include/: rang.hpp
test/: colorTest.cpp  cursorTest.cpp  meson.build  test.cpp
